# rusty_sts

./: .gitignore  Cargo.toml  README.md  build.rs
docs/superpowers/plans/: 2026-03-24-tray-autosync.md
docs/superpowers/specs/: 2026-03-24-tray-autosync-design.md
src/: app.rs  autosync.rs  config.rs  detect.rs  main.rs  notification.rs  startup.rs  sync.rs  tray.rs
